// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message from me 1`] = `
<div
  className="sc-bwzfXH bCJvgg"
>
  <div
    className="sc-htpNat hlONdS"
  >
    <div
      className="sc-bxivhb cArGuf"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      >
        some message
      </p>
    </div>
    <span
      className="sc-EHOje iXMCFR"
    />
  </div>
</div>
`;

exports[`message with avatar 1`] = `
<div
  className="sc-bwzfXH htdYfn"
>
  <img
    className="sc-bdVaJa bPnyOK"
    src="image.png"
  />
  <div
    className="sc-htpNat gzOeZN"
  >
    <div
      className="sc-bxivhb ckdBxL"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      >
        some message
      </p>
    </div>
    <span
      className="sc-EHOje iXMCFR"
    />
  </div>
</div>
`;

exports[`message with avatar from me 1`] = `
<div
  className="sc-bwzfXH doSXIc"
>
  <img
    className="sc-bdVaJa bPnyOK"
    src="image.png"
  />
  <div
    className="sc-htpNat fGvUdu"
  >
    <div
      className="sc-bxivhb cArGuf"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      >
        some message
      </p>
    </div>
    <span
      className="sc-EHOje iXMCFR"
    />
  </div>
</div>
`;

exports[`message with children 1`] = `
<div
  className="sc-bwzfXH kVwyuN"
>
  <div
    className="sc-htpNat kMfuhw"
  >
    <div
      className="sc-bxivhb ckdBxL"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      >
        some message
      </p>
    </div>
    <span
      className="sc-EHOje iXMCFR"
    />
  </div>
</div>
`;

exports[`message with label 1`] = `
<div
  className="sc-bwzfXH kVwyuN"
>
  <div
    className="sc-htpNat kMfuhw"
  >
    <div
      className="sc-bxivhb ckdBxL"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      >
        some message
      </p>
    </div>
    <span
      className="sc-EHOje iXMCFR"
    >
      some label
    </span>
  </div>
</div>
`;

exports[`message with not children 1`] = `
<div
  className="sc-bwzfXH kVwyuN"
>
  <div
    className="sc-htpNat kMfuhw"
  >
    <div
      className="sc-bxivhb ckdBxL"
    >
      <p
        className="sc-ifAKCX iCeWzE"
      />
    </div>
    <span
      className="sc-EHOje iXMCFR"
    />
  </div>
</div>
`;
